@@ -1,3 +1,7 @@
+Thu Jun 20 17:10:27 2002  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* lib/ftool.rb (BUFSIZE): tuning, set buffer length to 8192.
+
 Wed Jun 19 14:46:18 2002  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* ext/extmk.rb, lib/mkmf.rb (xsystem): open the log file if xsystem
